--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,6 @@
             "email": "287970798@qq.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {}
 }
